# gamextation-emu

./: .gitignore  README.md  main.py  project_structure.text  pyproject.toml  watcher.py
config/: container_platform.py
config/dependencies/: container_platform.py
config/storagesys/: storage_system.py
public/: project_analysis.md  structs_ui.md  visualization_logic.md
src/: app.py
src/assets/: resources.qrc
src/assets/font/: PPSSPP-Like background animation.mhtml
src/assets/img/: 9c21a1fa-bfd5-42d0-a505-1db2c1c7a581.avif  pic0.avif
src/components/animation/: animation_bg.py  animation_ppsspp.py
src/components/buttons/: button_icon.py  button_main_menu.py  button_text_icon.py
src/components/cover/: cover_game.py
src/components/inputs/: input_search.py
src/components/labels/: label_hour.py
src/components/loader/: render_loader.py
src/components/optimizer/: graphics_optimizer.py
src/components/toast/: notification_toast.py
src/data/: games_default.json
src/modules/about/: about.py  about.ui
src/modules/consoles/: consoles.py
src/modules/creator/: creator.py
src/modules/media/: media.ui
src/modules/roms/: roms.py  roms.ui
src/modules/settings/: settings.ui
src/services/: connection_request_services.py  game_requests_services.py  games_default.json
src/utils/: connection_tester_worker.py  image_loader_worker.py
src/views/: Consoles.ui  Intro.ui  MainApp.ui  SelectConsole.ui  consoles.py  intro.py  intro.ui  mainApp.py  main_menu.py  main_menu.ui  main_menu_dark.ui  main_menu_light.ui
test/: test_core.py
(+54 files in other folders)
