[tool.poetry]
name = "GameXtation"
version = "0.1.0"
description = ""
authors = ["Valfonsoardila10 <victoradila@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
docker-py = "^1.10.6"
PyQt5 = "^5.15.10"
qtawesome = "^1.3.1"
pygame = "^2.6.0"
psutil = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
